# rust-data-hub_old

./: Cargo.toml  README.md
src/: main.rs
src/database/: daily_forecast.rs  mod.rs
src/engine/: generic_scraper_engine.rs  mod.rs
src/scrapers/: mod.rs  test_scraper.rs  weather_scraper.rs  youtube_scraper.rs
