[package]
name = "scraping_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = { version = "0.17" }
tokio = { version = "1.29", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4.26", features = ["serde"] }
sea-orm = { version = "0.11.3", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
futures = { version = "0.3.28" }
dotenv = { version = "0.15.0" }
async-trait = "0.1.72"
